<?php


namespace Chapter1;


interface FlyBehavior
{
    public function fly(): void;
}