<?php


namespace Chapter1;


interface QuackBehavior
{
    public function quack(): void;
}